--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,7 +4,10 @@ set -g default-terminal "screen-256color"
 set -g status-fg  white
 set -g status-bg  black
 set -g status-left-length 30
-set -g status-right ""
-set -g status-left "#[bg=green]#[fg=black] #S "
-set -g window-status-format ' #W '
+set -g status-right-length 60
+set -g status-right "#[bg=blue]#[fg=white] #(python3 ~/.6music/now-playing.py) "
+set -g status-left "#[bg=blue]#[fg=white] #S #[bg=black] "
+set -g window-status-format '#W'
 set -g window-status-current-format "#[bg=white]#[fg=black] #W "
+set -g window-status-separator ' '
+set -g status-justify 'centre'
