--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,7 +5,7 @@ set -g status-fg  white
 set -g status-bg  black
 set -g status-left-length 30
 set -g status-right-length 60
-set -g status-right "#[bg=blue]#[fg=white] #(python3 ~/.6music/now-playing.py) "
+set -g status-right "#[bg=blue]#[fg=white] #(python3 ~/.scripts/now-playing.py) "
 set -g status-left "#[bg=blue]#[fg=white] #S #[bg=black] "
 set -g window-status-format '#W'
 set -g window-status-current-format "#[bg=white]#[fg=black] #W "
