fixed status bar in tmux conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,13 +1,13 @@
 set -g mouse on
 set -g default-terminal "screen-256color"
 
-set -g status-fg  white
-set -g status-bg  black
+set -g status-bg white
+set -g status-fg black
 set -g status-left-length 30
 set -g status-right-length 60
-set -g status-right "#[bg=blue]#[fg=white] #(python3 ~/.scripts/now-playing.py) "
-set -g status-left "#[bg=blue]#[fg=white] #S #[bg=black] "
+set -g status-right "#[bg=white]#[fg=black] #(python3 ~/.scripts/now-playing.py) "
+set -g status-left "#[bg=white]#[fg=black] #S "
 set -g window-status-format '#W'
-set -g window-status-current-format "#[bg=white]#[fg=black] #W "
+set -g window-status-current-format "#[bg=black]#[fg=white] #W "
 set -g window-status-separator ' '
-set -g status-justify 'centre'
+set -g status-justify 'left'
