changed status bar styling

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,8 +5,8 @@ set -g status-bg white
 set -g status-fg black
 set -g status-left-length 30
 set -g status-right-length 60
-set -g status-right "#[bg=white]#[fg=black] | #(python3 ~/.scripts/now-playing.py) "
-set -g status-left "#[bg=white]#[fg=black] #S | "
+set -g status-right "#[bg=white]#[fg=black] #(python3 ~/.scripts/now-playing.py) "
+set -g status-left "#[bg=white]#[fg=black] #S "
 set -g window-status-format '#W'
 set -g window-status-current-format "#[bg=black]#[fg=white] #W "
 set -g window-status-separator ' '
