--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,7 +4,8 @@ set -g status-bg white
 set -g status-fg black
 set -g status-left-length 30
 set -g status-right-length 60
-set -g status-right " #(python3 ~/.scripts/now-playing.py) "
+#set -g status-right " #(python3 ~/.scripts/now-playing.py) "
+set -g status-right "#[bg=green]#[fg=black] #S "
 set -g status-left ""
 set -g window-status-format ' #W '
 set -g window-status-current-format "#[bg=black]#[fg=yellow] #W "
