changed status bar a little

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,12 +1,13 @@
 set -g mouse on
 set -g default-terminal "screen-256color"
+
 set -g status-bg white
 set -g status-fg black
 set -g status-left-length 30
 set -g status-right-length 60
 #set -g status-right " #(python3 ~/.scripts/now-playing.py) "
-set -g status-right "#[bg=green]#[fg=black] #S "
-set -g status-left ""
+set -g status-left "#[bg=green]#[fg=black] #S "
+set -g status-right ""
 set -g window-status-format ' #W '
 set -g window-status-current-format "#[bg=black]#[fg=yellow] #W "
 set -g window-status-separator ''
