--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,7 +5,7 @@ set -g status-bg white
 set -g status-fg black
 set -g status-left-length 30
 set -g status-right-length 60
-#set -g status-right " #(python3 ~/.scripts/now-playing.py) "
+set -g status-right " #(python3 ~/.scripts/now-playing.py) "
 set -g status-left "#[bg=green]#[fg=black] #S "
 set -g status-right ""
 set -g window-status-format ' #W '
