Add instructions to readme

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,3 +12,4 @@ set -g window-status-format ' #W '
 set -g window-status-current-format "#[bg=black]#[fg=yellow] #W "
 set -g window-status-separator ''
 set -g status-justify 'left'
+set-window-option -g mode-keys vi
