--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,4 +12,8 @@ set -g window-status-format ' #W '
 set -g window-status-current-format "#[bg=black]#[fg=yellow] #W "
 set -g window-status-separator ''
 set -g status-justify 'left'
+
 set-window-option -g mode-keys vi
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+bind-key p paste-buffer
